--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
     "@material-ui/styles": "^4.11.5",
+    "@reduxjs/toolkit": "^2.2.3",
     "chart.js": "^2.8.0",
     "clsx": "^1.0.4",
     "history": "^4.9.0",
@@ -39,6 +40,7 @@
     "react-chartjs-2": "^2.7.6",
     "react-dom": "^16.8.6",
     "react-perfect-scrollbar": "^1.5.3",
+    "react-redux": "^8.1.3",
     "react-router-dom": "^5.0.1",
     "react-scripts": "^3.0.1",
     "recompose": "^0.30.0",
