fix(client): install axios and jwt decode, setup of api service

--- a/client/package.json
+++ b/client/package.json
@@ -31,9 +31,11 @@
     "@material-ui/icons": "^4.11.3",
     "@material-ui/styles": "^4.11.5",
     "@reduxjs/toolkit": "^2.2.3",
+    "axios": "^1.7.2",
     "chart.js": "^2.8.0",
     "clsx": "^1.0.4",
     "history": "^4.9.0",
+    "jwt-decode": "^4.0.0",
     "moment": "^2.24.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
