--- a/client/package.json
+++ b/client/package.json
@@ -50,6 +50,7 @@
     "recompose": "^0.30.0",
     "rxjs": "^7.8.1",
     "sass": "^1.75.0",
+    "socket.io-client": "^4.7.5",
     "underscore": "^1.9.1",
     "uuid": "^3.3.2",
     "validate.js": "^0.13.1"
