--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,6 @@
-PORT = 5000
-JWT_SECRET_KEY = "socket_secret_chat"
-HOST = "localhost"
-USER = "root"
-PASS = ""
-DB = "socket_chat"
+PORT=5000
+JWT_SECRET_KEY=socket_secret_chat
+DB_HOST=localhost
+DB_USER=root
+DB_PASS= 
+DB_NAME=socket_chat
