--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,7 @@
 PORT=5000
 JWT_SECRET_KEY=socket_secret_chat
 DB_HOST=localhost
+DB_PORT=3306
 DB_USER=root
-DB_PASS= 
+DB_PASS=
 DB_NAME=socket_chat
