server config update

--- a/server/.env
+++ b/server/.env
@@ -2,6 +2,6 @@ PORT=5000
 JWT_SECRET_KEY=socket_secret_chat
 DB_HOST=localhost
 DB_PORT=3306
-DB_USER=root
-DB_PASS=
+DB_USER=socket_user
+DB_PASS=1234
 DB_NAME=socket_chat
