--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,8 @@
   "version": "0.3.0",
   "private": false,
   "scripts": {
-    "start": "set NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
+    "start": "react-scripts start",
+    "dev": "set NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
