--- a/client/package.json
+++ b/client/package.json
@@ -47,8 +47,8 @@
     "react-perfect-scrollbar": "^1.5.3",
     "react-redux": "^8.1.3",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "^3.0.1",
-    "recompose": "^0.30.0",
+    "react-scripts": "^5.0.1",
+    "recompose": "^0.17.0",
     "rxjs": "^7.8.1",
     "sass": "^1.75.0",
     "socket.io-client": "^4.7.5",
@@ -57,12 +57,14 @@
     "validate.js": "^0.13.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.27.1",
+    "@babel/eslint-parser": "^7.27.1",
     "eslint": "5.16.0",
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.12.4",
     "prettier": "^1.17.1",
-    "prettier-eslint": "^8.8.2",
-    "prettier-eslint-cli": "^4.7.1",
+    "prettier-eslint": "^16.4.2",
+    "prettier-eslint-cli": "^8.0.1",
     "typescript": "^3.5.1"
   }
 }
